test/fail_compilation/imports/import18517d.d
import import18517b;
